@@ -1,3 +1,9 @@
+2012-10-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
+* devices.c: Fix the H: read function to return status $03 if the next read
+  operation would yield EOF. This complies with Atari DOS behaviour and fixes
+  Turbo BASIC's BLOAD.
+
+
 2012-09-09  Kostas Nakos  <knakos@gmail.com>
 * android/*: More UI fine tuning, new dialog for cartridge type selection
 * afile.c, cartridge.[ch], ui.c: Moved cartridge types' descriptive text to
